<resources>
    <string name="app_name">Adv Master-Detail</string>

    <string name="title_movie_list">Peliculas Retro</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="item_content">Item Content</string>
    <string name="item_details">Item Details</string>
    <string name="username_hint">Nombre de Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_guest">Iniciar Sin Cuenta</string>
    <string name="sign_up_text">¿No tienes cuenta? Sign Up</string>
    <string name="logo_description">Logo de Películas Retro</string>

    <!-- Strings añadidos para el registro -->
    <string name="email_hint">Email</string>
    <string name="repeat_password_hint">Repetir Contraseña</string>
    <string name="btn_register">Registrarse</string>

    <string name="favorite_button_desc">Marcar o desmarcar como favorito</string>
    <string name="title_favorite_list">Peliculas Favoritas</string>
</resources>
